--- a/index.html
+++ b/index.html
@@ -340,6 +340,7 @@ body.dark .sub-info {
       div.innerHTML = `
         <label>Tipo de Equipamento:</label>
         <select>
+          <option value="Rede">Rede</option>
           <option value="Nobreak">Nobreak</option>
 		      <option value="Computador">Computador</option>
           <option value="Alarme">Alarme</option>
