Inserção de logo

--- a/index.html
+++ b/index.html
@@ -7,6 +7,10 @@
   <script src="https://cdnjs.cloudflare.com/ajax/libs/jspdf/2.5.1/jspdf.umd.min.js"></script>
 
   <style>
+
+    body.dark img {
+  filter: brightness(0.8) contrast(1.2);
+}
     :root {
       --bg-color: #f7f9fc;
       --text-color: #2d3436;
@@ -234,6 +238,11 @@ body.dark .sub-info {
   <button class="theme-toggle" id="themeBtn" title="Alternar tema">🌙</button>
 
   <div class="container">
+    <div style="text-align:center; margin-bottom: 20px;">
+  <img src="https://raw.githubusercontent.com/himuramnt/himuramnt.github.io/main/assets/logo-himura.png" 
+       alt="Logo Himura Telecomunicações" 
+       style="max-width: 220px; height: auto;">
+</div>
     <h1>Manutenção Preventiva</h1>
 	<p class="sub-info">
   ⚠️ Este formulário não substituirá a obrigatoriedade de preenchimento da Ordem de Serviço.  
